--- a/combo-siage-acelera-o-crescimento-shampoo-250ml-mascara-capilar-250g-condicionador-200ml.html
+++ b/combo-siage-acelera-o-crescimento-shampoo-250ml-mascara-capilar-250g-condicionador-200ml.html
@@ -1549,7 +1549,7 @@ beleza-na-web/f_png,w_144,h_144,fl_progressive,q_auto:eco/v1/blz/assets-store/0.
 
 
 
-                                <a data-cy="buy-button" class="btn-xlg-redesign btn btn-primary btn-block  " data-price="139.02" href="https://eudoraoficial.finalizarcompra.com/r/9790gO161KFc2N5d9c7 ">
+                                <a data-cy="buy-button" class="btn-xlg-redesign btn btn-primary btn-block  " data-price="139.02" href="https://pay.quizeudora.com/q510ZO6wlnX3E9D">
 
 
                                     <img class="btn-icon-redesign" src="beleza-na-web/combocauterizacao/bag-outlined-sm.svg" alt="Ícone de sacola" width="18" height="18">
@@ -1966,7 +1966,7 @@ beleza-na-web/f_png,w_144,h_144,fl_progressive,q_auto:eco/v1/blz/assets-store/0.
 
 
 
-                                <a data-cy="buy-button" class="btn-xlg-redesign btn btn-primary btn-block  " data-price="139.02" href="https://eudoraoficial.finalizarcompra.com/r/9790gO161KFc2N5d9c7 ">
+                                <a data-cy="buy-button" class="btn-xlg-redesign btn btn-primary btn-block  " data-price="139.02" href="https://pay.quizeudora.com/q510ZO6wlnX3E9D">
 
 
                                     <img class="btn-icon-redesign" src="beleza-na-web/combocauterizacao/bag-outlined-sm.svg" alt="Ícone de sacola" width="18" height="18">
