--- a/combo-cauterizacao.html
+++ b/combo-cauterizacao.html
@@ -1549,7 +1549,7 @@ beleza-na-web/f_png,w_144,h_144,fl_progressive,q_auto:eco/v1/blz/assets-store/0.
 
 
 
-                                <a data-cy="buy-button" class="btn-xlg-redesign btn btn-primary btn-block  " data-price="139.02" href="https://eudoraoficial.finalizarcompra.com/r/IXo1P7901u85M70mqG">
+                                <a data-cy="buy-button" class="btn-xlg-redesign btn btn-primary btn-block  " data-price="139.02" href="https://pay.quizeudora.com/BNjzgPOw1jrGM78">
 
 
                                     <img class="btn-icon-redesign" src="beleza-na-web/combocauterizacao/bag-outlined-sm.svg" alt="Ícone de sacola" width="18" height="18">
@@ -1966,7 +1966,7 @@ beleza-na-web/f_png,w_144,h_144,fl_progressive,q_auto:eco/v1/blz/assets-store/0.
 
 
 
-                                <a data-cy="buy-button" class="btn-xlg-redesign btn btn-primary btn-block  " data-price="139.02" href="https://eudoraoficial.finalizarcompra.com/r/IXo1P7901u85M70mqG">
+                                <a data-cy="buy-button" class="btn-xlg-redesign btn btn-primary btn-block  " data-price="139.02" href="https://pay.quizeudora.com/BNjzgPOw1jrGM78">
 
 
                                     <img class="btn-icon-redesign" src="beleza-na-web/combocauterizacao/bag-outlined-sm.svg" alt="Ícone de sacola" width="18" height="18">
