--- a/combo-siage.html
+++ b/combo-siage.html
@@ -1585,7 +1585,7 @@ beleza-na-web/image/upload/f_png,w_144,h_144,fl_progressive,q_auto:eco/v1/blz/as
 
 
 
-                                <a data-cy="buy-button" class="btn-xlg-redesign btn btn-primary btn-block  " data-price="139.02" href="https://eudoraoficial.finalizarcompra.com/r/w6t1K871958qm71tWf">
+                                <a data-cy="buy-button" class="btn-xlg-redesign btn btn-primary btn-block  " data-price="139.02" href="https://pay.quizeudora.com/P5LNZ8oRAbd3aRy">
 
 
                                     <img class="btn-icon-redesign" src="beleza-na-web/combocauterizacao/bag-outlined-sm.svg" alt="Ícone de sacola" width="18" height="18">
@@ -2024,7 +2024,7 @@ beleza-na-web/image/upload/f_png,w_144,h_144,fl_progressive,q_auto:eco/v1/blz/as
 
 
 
-                                <a data-cy="buy-button" class="btn-xlg-redesign btn btn-primary btn-block  " data-price="139.02" href="https://eudoraoficial.finalizarcompra.com/r/w6t1K871958qm71tWf">
+                                <a data-cy="buy-button" class="btn-xlg-redesign btn btn-primary btn-block  " data-price="139.02" href="https://pay.quizeudora.com/P5LNZ8oRAbd3aRy">
 
 
                                     <img class="btn-icon-redesign" src="beleza-na-web/combocauterizacao/bag-outlined-sm.svg" alt="Ícone de sacola" width="18" height="18">
