--- a/combo-siage-revela-os-cacho.html
+++ b/combo-siage-revela-os-cacho.html
@@ -3,6 +3,17 @@
     <base href="/"><meta name="description" content="O Combo Siàge Revela Os Cachos higieniza e trata seus cabelos enquanto os deixa com balanço natural.">
     <link rel="canonical" href="https://www.eudora.com.br/combo-siage-revela-os-cachos-shampoo-250ml-condicionador-200ml-mascara-capilar-250g/">
     
+<!-- Google Tag Manager --> 
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': 
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], 
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); 
+    })(window,document,'script','dataLayer','GTM-KCTBQKXW');</script> 
+    <!-- End Google Tag Manager -->
+    <!-- Google Tag Manager (noscript) --> 
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KCTBQKXW" 
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> 
+    <!-- End Google Tag Manager (noscript) -->
 
 
 <meta name="robots" content="index, follow">
