--- a/combo-siage-acelera-o-crescimento-shampoo-250ml-mascara-capilar-250g-condicionador-200ml.html
+++ b/combo-siage-acelera-o-crescimento-shampoo-250ml-mascara-capilar-250g-condicionador-200ml.html
@@ -4,6 +4,17 @@
     <meta name="description" content="Combo Siàge Pro Cronology Cronograma Capilar Acelerado Completo (4 itens)">
     <link rel="canonical" href="https://eudorabr.site/products/index.htm">
 
+<!-- Google Tag Manager --> 
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': 
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], 
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= 
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f); 
+    })(window,document,'script','dataLayer','GTM-KCTBQKXW');</script> 
+    <!-- End Google Tag Manager -->
+    <!-- Google Tag Manager (noscript) --> 
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KCTBQKXW" 
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> 
+    <!-- End Google Tag Manager (noscript) -->
 
 
     <meta name="robots" content="index, follow">
